<resources>

    <string name="app_name">ToolsDemo</string>

    <string name="password_input_box">密码框</string>
    <string name="round_picture">圆形图片</string>
    <string name="spring_back_list_view">回弹的ListView</string>
    <string name="spring_back_scroll_view">回弹的ScrollView</string>
    <string name="load_dialog">加载的Dialog</string>

    <string name="input_pwd">输入</string>
    <string name="show_pwd">显示密码</string>
    <string name="hide_pwd">隐藏密码</string>
    <string name="delete">删除一个</string>
    <string name="delete_all">清空所有</string>
    <string name="get">获得文字</string>

</resources>
