<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pwd="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.geek.widget.PasswordInputBox
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        pwd:boxPadding="5dp"
        pwd:boxType="stroke"
        pwd:defaultBoxColor="#cccccc"
        pwd:selectBoxColor="#ff7200"
        pwd:strokeColor="#969696" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center"
            android:onClick="input"
            android:text="@string/input_pwd"
            android:textColor="#0000ff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#969696"
            android:gravity="center"
            android:onClick="showPwd"
            android:text="@string/show_pwd"
            android:textColor="#0000ff"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center"
            android:onClick="hidePwd"
            android:text="@string/hide_pwd"
            android:textColor="#0000ff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#969696"
            android:gravity="center"
            android:onClick="delete"
            android:text="@string/delete"
            android:textColor="#0000ff"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center"
            android:onClick="deleteAll"
            android:text="@string/delete_all"
            android:textColor="#0000ff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#969696"
            android:gravity="center"
            android:onClick="getText"
            android:text="@string/get"
            android:textColor="#0000ff"
            android:textSize="26sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/show_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="#0000ff"
        android:textSize="26sp" />

</LinearLayout>